@@ -2,8 +2,6 @@ package io.github.stavshamir.springwolf.asyncapi.scanners.channels.operationdata
 
 import com.asyncapi.v2._0_0.model.channel.ChannelItem;
 import com.asyncapi.v2._0_0.model.channel.operation.Operation;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Maps;
 import io.github.stavshamir.springwolf.asyncapi.scanners.classes.ComponentClassScanner;
 import io.github.stavshamir.springwolf.asyncapi.types.channel.operation.message.Message;
 import io.github.stavshamir.springwolf.asyncapi.types.channel.operation.message.PayloadReference;
@@ -86,7 +84,7 @@ class AsyncPublisherAnnotationScannerTest {
                 .build();
 
         assertThat(actualChannels)
-                .containsExactly(Maps.immutableEntry("test-channel", expectedChannel));
+                .containsExactly(Map.entry("test-channel", expectedChannel));
     }
 
     @Test
@@ -111,7 +109,7 @@ class AsyncPublisherAnnotationScannerTest {
         Operation operation = Operation.builder()
                 .description("description")
                 .operationId("test-channel_subscribe")
-                .bindings(ImmutableMap.of(TestOperationBindingProcessor.TYPE, TestOperationBindingProcessor.BINDING))
+                .bindings(Map.of(TestOperationBindingProcessor.TYPE, TestOperationBindingProcessor.BINDING))
                 .message(message)
                 .build();
 
@@ -121,7 +119,7 @@ class AsyncPublisherAnnotationScannerTest {
                 .build();
 
         assertThat(actualChannels)
-                .containsExactly(Maps.immutableEntry("test-channel", expectedChannel));
+                .containsExactly(Map.entry("test-channel", expectedChannel));
     }
 
     @Test
@@ -168,8 +166,8 @@ class AsyncPublisherAnnotationScannerTest {
                 .build();
 
         assertThat(actualChannels)
-                .containsExactlyEntriesOf(
-                        ImmutableMap.of(
+                .containsExactlyInAnyOrderEntriesOf(
+                        Map.of(
                                 "test-channel-1", expectedChannel1,
                                 "test-channel-2", expectedChannel2));
     }
